@@ -270,6 +270,9 @@ fix_falling_through_floor_during_sword_strike = true
 ; Prince safe steps near a wall/gate when facing in an opposite direction (Fixes tricks 1 and 2).
 fix_turn_running_near_wall = true
 
+; Feather fall should not affect guards, because only the prince can drink the feather fall potion.
+fix_feather_fall_affects_guards = true
+
 
 [CustomGameplay]
 ; Turn on customization options.
