@@ -208,6 +208,7 @@ enum setting_ids {
 	SETTING_FIX_FALLING_THROUGH_FLOOR_DURING_SWORD_STRIKE,
 	SETTING_FIX_REGISTER_QUICK_INPUT,
 	SETTING_FIX_TURN_RUNNING_NEAR_WALL,
+	SETTING_FIX_FEATHER_FALL_AFFECTS_GUARDS,
 	SETTING_ENABLE_SUPER_HIGH_JUMP,
 	SETTING_ENABLE_JUMP_GRAB,
 	SETTING_USE_CUSTOM_OPTIONS,
@@ -626,6 +627,10 @@ setting_type gameplay_settings[] = {
 				.linked = &fixes_saved.fix_turn_running_near_wall, .required = &use_fixes_and_enhancements,
 				.text = "Fix run turning near wall",
 				.explanation = "Ensures Prince safe steps near a wall/gate when facing in an opposite direction."},
+		{.id = SETTING_FIX_FEATHER_FALL_AFFECTS_GUARDS, .style = SETTING_STYLE_TOGGLE,
+				.linked = &fixes_saved.fix_feather_fall_affects_guards, .required = &use_fixes_and_enhancements,
+				.text = "Fix feather fall affecting guards",
+				.explanation = "Feather fall should not affect guards, because only the prince can drink the feather fall potion."},
 };
 
 NAMES_LIST(tile_type_setting_names, {
