@@ -776,3 +776,5 @@ FIXED: Avoid misaligned memory access on platforms where it causes a crash. (e.g
 DONE: You can redefine keyboard controls in the pause menu. (They are not saved on quit yet.)
 FIXED: In the list of high scores, show 0:00 if the time has expired.
 	Details: https://github.com/NagyD/SDLPoP/issues/340
+FIXED: Added a configurable fix for: Feather fall should not affect guards, because only the prince can drink the feather fall potion.
+	Details: See FIX_FEATHER_FALL_AFFECTS_GUARDS in config.h and https://github.com/NagyD/SDLPoP/issues/337
